--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
     "@netlify/plugin-nextjs": "^5.3.2",
+    "@next/font": "^14.2.3",
     "eslint": "9.x",
     "next": "^14.2.0",
     "prettier": "^3.3.1",
