--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "@netlify/plugin-nextjs": "^5.3.2",
-    "@next/font": "^14.2.3",
-    "eslint": "9.x",
-    "next": "^14.2.0",
+    "eslint": "9.4.0",
+    "next": "^14.2.3",
     "prettier": "^3.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
